--- a/server/apps/distributed-app/README.adoc
+++ b/server/apps/distributed-app/README.adoc
@@ -4,6 +4,10 @@
 
  * Java 11 SDK
 
+Firstly, create your own user network on Docker for the James environment:
+
+    $ docker network create --driver bridge james
+
 Third party compulsory dependencies:
 
  * Cassandra 3.11.10
@@ -13,10 +17,10 @@ Third party compulsory dependencies:
 
 [source]
 ----
-$ docker run -d -p 9042:9042 --name=cassandra cassandra:3.11.10
-$ docker run -d -p 9200:9200 --name=elasticsearch --env 'discovery.type=single-node' docker.elastic.co/elasticsearch/elasticsearch:7.10.2
-$ docker run -d -p 5672:5672 -p 15672:15672 --name=rabbitmq rabbitmq:3.8.18-management
-$ docker run -d --env 'REMOTE_MANAGEMENT_DISABLE=1' --env 'SCALITY_ACCESS_KEY_ID=accessKey1' --env 'SCALITY_SECRET_ACCESS_KEY=secretKey1' --name=s3 zenko/cloudserver:8.2.6
+$ docker run -d --network james -p 9042:9042 --name=cassandra cassandra:3.11.10
+$ docker run -d --network james -p 9200:9200 --name=elasticsearch --env 'discovery.type=single-node' docker.elastic.co/elasticsearch/elasticsearch:7.10.2
+$ docker run -d --network james -p 5672:5672 -p 15672:15672 --name=rabbitmq rabbitmq:3.8.18-management
+$ docker run -d --network james --env 'REMOTE_MANAGEMENT_DISABLE=1' --env 'SCALITY_ACCESS_KEY_ID=accessKey1' --env 'SCALITY_SECRET_ACCESS_KEY=secretKey1' --name=s3 zenko/cloudserver:8.2.6
 ----
 
 == Running
@@ -58,7 +62,7 @@ Then run it:
 
 [source]
 ----
-docker run apache/james:distributed-latest
+docker run --network james apache/james:distributed-latest
 ----
 
 For security reasons you are required to generate your own keystore, that you can mount into the container via a volume:
@@ -66,7 +70,7 @@ For security reasons you are required to generate your own keystore, that you ca
 [source]
 ----
 keytool -genkey -alias james -keyalg RSA -keystore keystore
-docker run -v $PWD/keystore:/root/conf/keystore docker run apache/james:distributed-latest
+docker run --network james -v $PWD/keystore:/root/conf/keystore docker run apache/james:distributed-latest
 ----
 
 Use the [JAVA_TOOL_OPTIONS environment option](https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#jvm-flags)
@@ -74,7 +78,7 @@ to pass extra JVM flags. For instance:
 
 [source]
 ----
-docker run -e "JAVA_TOOL_OPTIONS=-Xmx500m -Xms500m" apache/james:distributed-latest
+docker run --network james -e "JAVA_TOOL_OPTIONS=-Xmx500m -Xms500m" apache/james:distributed-latest
 ----
 
 [Glowroot APM](https://glowroot.org/) is packaged as part of the docker distribution to easily enable valuable performances insights.
@@ -83,7 +87,7 @@ Disabled by default, its java agent can easily be enabled:
 
 [source]
 ----
-docker run -e "JAVA_TOOL_OPTIONS=-javaagent:/root/glowroot.jar" apache/james:distributed-latest
+docker run --network james -e "JAVA_TOOL_OPTIONS=-javaagent:/root/glowroot.jar" apache/james:distributed-latest
 ----
 The [CLI](https://james.apache.org/server/manage-cli.html) can easily be used:
 
