--- a/server/apps/distributed-app/docs/modules/ROOT/pages/run/run-docker.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/run/run-docker.adoc
@@ -47,26 +47,29 @@ Alternatively we provide convenience distribution for the latest release:
     docker pull apache/james:distributed-3.6.1
 
 === Running
+Firstly, create your own user network on Docker for the James environment:
 
-You need a running *cassandra* in docker. To achieve this run:
+    $ docker network create --driver bridge james
 
-    $ docker run -d --name=cassandra cassandra:3.11.10
+You need a running *cassandra* in docker which connects to *james* network. To achieve this run:
 
-You need a running *rabbitmq* in docker. To achieve this run:
+    $ docker run -d --network james --name=cassandra cassandra:3.11.10
 
-    $ docker run -d --name=rabbitmq rabbitmq:3.8.18-management
+You need a running *rabbitmq* in docker which connects to *james* network. To achieve this run:
 
-You need a running *Zenko Cloudserver* objectstorage in docker. To achieve this run:
+    $ docker run -d --network james --name=rabbitmq rabbitmq:3.8.18-management
 
-    $ docker run -d --env 'REMOTE_MANAGEMENT_DISABLE=1' --env 'SCALITY_ACCESS_KEY_ID=accessKey1' --env 'SCALITY_SECRET_ACCESS_KEY=secretKey1' --name=s3 zenko/cloudserver:8.2.6
+You need a running *Zenko Cloudserver* objectstorage in docker which connects to *james* network. To achieve this run:
 
-You need a running *ElasticSearch* in docker. To achieve this run:
+    $ docker run -d --network james --env 'REMOTE_MANAGEMENT_DISABLE=1' --env 'SCALITY_ACCESS_KEY_ID=accessKey1' --env 'SCALITY_SECRET_ACCESS_KEY=secretKey1' --name=s3 zenko/cloudserver:8.2.6
 
-    $ docker run -d --name=elasticsearch --env 'discovery.type=single-node' docker.elastic.co/elasticsearch/elasticsearch:7.10.2
+You need a running *ElasticSearch* in docker which connects to *james* network. To achieve this run:
 
-If you want to use all the JMAP search capabilities, you may also need to start Tika:
+    $ docker run -d --network james --name=elasticsearch --env 'discovery.type=single-node' docker.elastic.co/elasticsearch/elasticsearch:7.10.2
 
-    $ docker run -d --name=tika apache/tika:1.24
+If you want to use all the JMAP search capabilities, you may also need to start Tika container which connects to *james* network:
+
+    $ docker run -d --network james --name=tika apache/tika:1.24
 
 You can find more explanation on the need of Tika in this page http://james.apache.org/server/config-elasticsearch.html
 
@@ -78,9 +81,8 @@ Copy your TLS keys to the current folder or generate it using the following comm
 
 To run this container :
 
-    $ docker run --hostname HOSTNAME -p "25:25" -p 80:80 -p "110:110" -p "143:143" -p "465:465" -p "587:587" -p "993:993" -p "127.0.0.1:8000:8000" --link cassandra:cassandra --link rabbitmq:rabbitmq
-         --link elasticsearch:elasticsearch --link tika:tika --link s3:s3.docker.test --name james_run
-         -v $PWD/keystore:/root/conf/keystore -t apache/james:distributed-latest
+    $ docker run --network james --hostname HOSTNAME -p "25:25" -p 80:80 -p "110:110" -p "143:143" -p "465:465" -p "587:587" -p "993:993" -p "127.0.0.1:8000:8000" --name james_run
+        -v $PWD/keystore:/root/conf/keystore -t apache/james:distributed-latest
 
 Where :
 
@@ -112,12 +114,11 @@ Or by mapping the 4000 port to the IP of the desired network interface, for exam
 
 You can handle attachment text extraction before indexing in ElasticSearch. This makes attachments searchable. To enable this:
 
-Run tika:
+Run tika connect to *james* network:
 
-    $ docker run --name tika apache/tika:1.24
+    $ docker run -d --network james --name tika apache/tika:1.24
 
-Add a link for the tika container in the above command line:
+Run James:
 
-    $ docker run --hostname HOSTNAME -p "25:25" -p 80:80 -p "110:110" -p "143:143" -p "465:465" -p "587:587" -p "993:993" -p "127.0.0.1:8000:8000" --link cassandra:cassandra --link rabbitmq:rabbitmq
-         --link elasticsearch:elasticsearch --link tika:tika --link s3:s3.docker.test --name james_run
-         --link tika:tika -v $PWD/keystore:/root/conf/keystore -t apache/james:distributed-latest
+    $ docker run --network james --hostname HOSTNAME -p "25:25" -p 80:80 -p "110:110" -p "143:143" -p "465:465" -p "587:587" -p "993:993" -p "127.0.0.1:8000:8000"
+        --name james_run -v $PWD/keystore:/root/conf/keystore -t apache/james:distributed-latest
