JAMES-3692 Write a security checklist
This document will present the most threats running James exposes you to, and then will list actions one can take to address those threats. We will rate those from MUST (if not addressed basic security features will not be achieved), SHOULD (easy to set up, not strictly required but still very beneficial) and COULD (for the most stringent environments, but expect advanced configuration to be mobilized...)

This document should enable one to see what to expect for James security-wise.

--- a/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/nav.adoc
@@ -56,6 +56,7 @@
 *** xref:operate/migrating.adoc[]
 *** xref:operate/cli.adoc[]
 *** xref:operate/cassandra-migration.adoc[]
+*** xref:operate/security.adoc[]
 ** xref:extending/index.adoc[]
 *** xref:extending/mail-processing.adoc[]
 *** xref:extending/mailbox-listeners.adoc[]
