--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/rabbitmq.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/rabbitmq.adoc
@@ -129,6 +129,10 @@ It can be useful then to disable it.
 Tips for choosing metricsEnabled are explained in
 https://github.com/apache/james-project/blob/master/server/apps/distributed-app/sample-configuration/rabbitmq.properties[rabbitmq.properties]
 
+| notification.queue.ttl
+| Configure queue ttl (in ms). References: https://www.rabbitmq.com/ttl.html#queue-ttl.
+Optional integer, defaults is 3600000.
+
 |===
 
 == RabbitMQ Tasks Configuration
