--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/smtp.adoc
@@ -148,6 +148,13 @@ box extra SMTP handlers and hooks.
 
 |===
 
+=== OIDC setup
+James SMTP support XOAUTH2 authentication mechanism which allow authenticating against a OIDC providers.
+Please configure `auth.oidc` part to use this.
+
+We do supply an link:https://github.com/apache/james-project/tree/master/examples/oidc[example] of such a setup.
+It uses the Keycloak OIDC provider, but usage of similar technologies is definitely doable.
+
 == About open relays
 
 Authenticated SMTP is a method of securing your SMTP server.  With SMTP AUTH enabled senders who wish to
