--- a/server/apps/distributed-app/docs/modules/ROOT/pages/configure/imap.adoc
+++ b/server/apps/distributed-app/docs/modules/ROOT/pages/configure/imap.adoc
@@ -53,16 +53,16 @@ Whether to enable Authentication PLAIN if the connection is not encrypted via SS
 | auth.requireSSL
 | true or false. Defaults to `true`. Whether to require SSL to authenticate. If this is required, the IMAP server will disable authentication on unencrypted channels.
 
-| auth.oauth.oidcConfigurationURL
+| auth.oidc.oidcConfigurationURL
 | Provide OIDC url address for information to user. Only configure this when you want to authenticate IMAP server using a OIDC provider.
 
-| auth.oauth.jwksURL
+| auth.oidc.jwksURL
 | Provide url to get OIDC's JSON Web Key Set to validate user token. Only configure this when you want to authenticate IMAP server using a OIDC provider.
 
-| auth.oauth.claim
+| auth.oidc.claim
 | Claim string uses to identify user. E.g: "email_address". Only configure this when you want to authenticate IMAP server using a OIDC provider.
 
-| auth.oauth.scope
+| auth.oidc.scope
 | An OAuth scope that is valid to access the service (RF: RFC7628). Only configure this when you want to authenticate IMAP server using a OIDC provider.
 
 | timeout
@@ -111,7 +111,7 @@ will use the specified value.
 
 === OIDC setup
 James IMAP support XOAUTH2 authentication mechanism which allow authenticating against a OIDC providers.
-Please configure `auth.oauth` part to use this.
+Please configure `auth.oidc` part to use this.
 
 We do supply an link:https://github.com/apache/james-project/tree/master/examples/oidc[example] of such a setup.
 It uses the Keycloak OIDC provider, but usage of similar technologies is definitely doable.
